helm-apps/jellyfin/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: jellyfin
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: jellyfin
spec:
  podSelector:
    matchLabels:
      app: jellyseerr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: traefik
      ports:
        - port: 5055
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jellystat-ingress
  namespace: jellyfin
spec:
  podSelector:
    matchLabels:
      app: jellystat
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: traefik
      ports:
        - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jellystat-postgres
  namespace: jellyfin
spec:
  podSelector:
    matchLabels:
      app: jellystat-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: jellystat
      ports:
        - port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jellyfin-exporter-metrics
  namespace: jellyfin
spec:
  podSelector:
    matchLabels:
      app: jellyfin-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
      ports:
        - port: 9594
